--- a/MovieShopAPI/appsettings.json
+++ b/MovieShopAPI/appsettings.json
@@ -9,5 +9,10 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
+  "JwtSecretKey": "7nvVhkcsLpRotBz3PIJh3ibWq/QLeQWnpzn4f3y9Auw",
+  "ExpirationHours": 72,
+  "Issuer": "MovieShop, Inc",
+  "Audience":  "MovieShop Users",
+  "ClientSPAUrl": "http://localhost:4200",
   "AllowedHosts": "*"
 }
